# x-activation

./: LICENSE  README.md  pyproject.toml
src/: x_gate.py
